--- a/spider/build.gradle
+++ b/spider/build.gradle
@@ -1,7 +1,8 @@
 dependencies {
   compile project(":$rootName-test")
-  compile project(":$rootName-boot")
+  compile project(":$rootName-rest")
   compile "org.jsoup:jsoup:$vers.jsoup"
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
+apply from: rootProject.file("buildscript/gradle/sub_springboot.gradle")
