--- a/spider/src/main/resources/application.yml
+++ b/spider/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 spring:
   application:
-    name: Rest-Server
+    name: Spider-Server
+  datasource:
+    spider:
+      url: "jdbc:mysql://localhost:3306/spider?useUnicode=true&characterEncoding=UTF8&useSSL=false&rewriteBatchedStatements=true&autoReconnect=true&failOverReadOnly=false"
+      username: "root"
+      password: "root"
+
 server:
   port: 1388
