--- a/admin/rest/build.gradle
+++ b/admin/rest/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
+  compile project(":$rootName-rest")
   compile project(":$rootName-mybatis")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
+apply from: rootProject.file("buildscript/gradle/sub_springboot.gradle")
