--- a/bridge/console/src/main/resources/application.yml
+++ b/bridge/console/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 spring:
   application:
-    name: Spider-Server
+    name: Console-Server
   datasource:
+    admin:
+      url: "jdbc:mysql://localhost:3306/%s?useUnicode=true&characterEncoding=UTF8&useSSL=false&rewriteBatchedStatements=true&autoReconnect=true&failOverReadOnly=false"
+      username: "root"
+      password: "root"
     spider:
       url: "jdbc:mysql://localhost:3306/sun?useUnicode=true&characterEncoding=UTF8&useSSL=false&rewriteBatchedStatements=true&autoReconnect=true&failOverReadOnly=false"
       username: "root"
@@ -12,4 +16,4 @@ spring:
       password: "root"
 
 server:
-  port: 1488
+  port: 9729
