--- a/spider/service/build.gradle
+++ b/spider/service/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-  compile project(":$rootName-picture-spider")
+  compile project(":$rootName-image-spider")
   compile project(":$rootName-spider-contract")
 
   compile project(":$rootName-test")
