--- a/image/rest/build.gradle
+++ b/image/rest/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   compile project(":$rootName-rest")
+  compile project(":$rootName-image-service")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
