--- a/layout/contract/build.gradle
+++ b/layout/contract/build.gradle
@@ -1,6 +1,5 @@
 dependencies {
-  compile project(":$rootName-image-contract")
-  compile project(":$rootName-layout-contract")
+  compile project(":$rootName-boot")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
