--- a/image/spider/build.gradle
+++ b/image/spider/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
   compile project(":$rootName-image-service")
   compile project(":$rootName-spider-contract")
+  implementation "com.google.guava:guava:$vers.guava"
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
