--- a/bridge/image-server/build.gradle
+++ b/bridge/image-server/build.gradle
@@ -3,5 +3,5 @@ dependencies {
   compile project(":$rootName-layout-rest")
 }
 
-apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
+apply from: project.file("./docker.gradle")
 apply from: rootProject.file("buildscript/gradle/sub_springjersey.gradle")
