--- a/bridge/image-server/src/main/resources/application.yml
+++ b/bridge/image-server/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: Whispered-Server
   datasource:
     image:
-      url: "jdbc:mysql://host.docker.internal:3306/sun?useUnicode=true&characterEncoding=UTF8&useSSL=false&rewriteBatchedStatements=true&autoReconnect=true&failOverReadOnly=false"
-      username: "root"
-      password: "root"
+      url: jdbc:mysql://${MYSQL_SERVER:localhost:3306}/sun?useUnicode=true&characterEncoding=UTF8&useSSL=false&rewriteBatchedStatements=true&autoReconnect=true&failOverReadOnly=false
+      username: ${MYSQL_USER_OF_SUN:root}
+      password: ${MYSQL_PASSWORD_OF_SUN:root}
 
 server:
   port: 1379
