--- a/bridge/rest-server/build.gradle
+++ b/bridge/rest-server/build.gradle
@@ -2,6 +2,7 @@ dependencies {
   compile project(":$rootName-image-rest")
   compile project(":$rootName-layout-rest")
   compile project(":$rootName-console-rest")
+  compile project(":$rootName-mall-core-rest")
 }
 
 apply from: project.file("./docker.gradle")
