--- a/mall/admin/service/build.gradle
+++ b/mall/admin/service/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
   compile project(":$rootName-mybatis")
   compile project(":$rootName-mall-admin-mapper")
+  compile project(":$rootName-mall-core-service")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
