--- a/bridge/rest-server/build.gradle
+++ b/bridge/rest-server/build.gradle
@@ -3,6 +3,7 @@ dependencies {
   compile project(":$rootName-layout-rest")
   compile project(":$rootName-console-rest")
   compile project(":$rootName-mall-core-rest")
+  compile project(":$rootName-mall-admin-rest")
 }
 
 apply from: project.file("./docker.gradle")
