--- a/qm/service/build.gradle
+++ b/qm/service/build.gradle
@@ -2,7 +2,7 @@ dependencies {
   compile project(":$rootName-mybatis")
   compile project(":$rootName-qm-mapper")
 
-//  implementation "javax.mail:javax.mail:$vers.mail"
+  implementation "com.sun.mail:javax.mail:$vers.mail"
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
