--- a/bridge/image-server/build.gradle
+++ b/bridge/image-server/build.gradle
@@ -2,6 +2,8 @@ dependencies {
   compile project(":$rootName-image-rest")
   compile project(":$rootName-layout-rest")
   compile project(":$rootName-console-rest")
+  compile project(":$rootName-image-spider")
+  compile project(":$rootName-spider-rest")
 }
 
 apply from: project.file("./docker.gradle")
