--- a/bridge/qm-server/build.gradle
+++ b/bridge/qm-server/build.gradle
@@ -1,5 +1,7 @@
 dependencies {
   compile project(":$rootName-qm-rest")
+  compile project(":$rootName-qm-spider")
+  compile project(":$rootName-spider-rest")
 }
 
 apply from: project.file("./docker.gradle")
