--- a/bridge/mall-server/docker.gradle
+++ b/bridge/mall-server/docker.gradle
@@ -2,14 +2,14 @@ apply plugin: "com.google.cloud.tools.jib"
 
 import org.gradle.util.VersionNumber
 
-def user = System.properties["aliRepoUser"]
-def pwd = System.properties["aliRepoPassword"]
+def user = System.properties["repoUser"]
+def pwd = System.properties["repoPassword"]
 def version = VersionNumber.parse((String) project.version).baseVersion
 
 jib {
   allowInsecureRegistries = true
   from {
-    image = "registry.cn-hangzhou.aliyuncs.com/linsh_components/oracle-jre:8"
+    image = "docker.sun.com/components/oracle-jre:8"
     auth {
       username = user
       password = pwd
