--- a/bridge/qm-server/src/main/resources/application.yml
+++ b/bridge/qm-server/src/main/resources/application.yml
@@ -8,9 +8,13 @@ spring:
     username: ${MYSQL_USER_OF_QM:root}
     password: ${MYSQL_PASSWORD_OF_QM:root}
 
+admin.username: ${BASE64_SECRET_KEY:admin}
+admin.password: ${BASE64_SECRET_KEY:admin123}
+
 footprint.max: ${FOOTPRINT_MAX:100}
 retrieve.password.key: ${RETRIEVE_PASSWORD_KEY:abcd}
 gmail.username: ${GMAIL_USERNAME:xfanggirl2@gmail.com}
 gmail.password: ${GMAIL_PASSWORD:cjunbmlztfuribvh}
 server.http.domain: ${GMAIL_PASSWORD:http://localhost:1379/#/user/changePwd}
 image.store.dir: ${IMAGE_STORE_DIR:/opt/static/image/qm}
+base64.secret.key: ${BASE64_SECRET_KEY:Bar12345Bar12345}
