--- a/scheduler/service/build.gradle
+++ b/scheduler/service/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   compile project(":$rootName-quartz")
+  compile project(":$rootName-common-service")
   compile project(":$rootName-scheduler-mapper")
 }
 
