--- a/bridge/qm-server/src/main/resources/application.yml
+++ b/bridge/qm-server/src/main/resources/application.yml
@@ -16,6 +16,7 @@ retrieve.password.key: ${RETRIEVE_PASSWORD_KEY:abcd}
 server.http.domain: ${SERVER_HTTP_DOMAIN:http://localhost:1379/#/user/changePwd}
 image.store.dir: ${IMAGE_STORE_DIR:/opt/static/image/qm}
 base64.secret.key: ${BASE64_SECRET_KEY:3[7#96;97@6$2]68}
+promotion.treatment: ${PROMOTION_TREATMENT:北上广深资源 https://xfangirl.com}
 
 gmail.username: ${GMAIL_USERNAME:xfanggirl2@gmail.com}
 gmail.password: ${GMAIL_PASSWORD:cjunbmlztfuribvh}
