--- a/bridge/qm-server/src/main/resources/message.properties
+++ b/bridge/qm-server/src/main/resources/message.properties
@@ -2,6 +2,7 @@
 1001=\u8A72\u7528\u6236\u540D\u5DF2\u88AB\u6CE8\u518A
 1002=\u5BC6\u78BC\u932F\u8AA4
 1003=\u8A72\u90F5\u7BB1\u5DF2\u88AB\u6CE8\u518A
+1004=\u983B\u7E41\u6CE8\u518A\uFF0C\u7A0D\u5F8C\u518D\u8A66
 
 2000=\u8A72\u6559\u5E2B\u5DF2\u4E0B\u8AB2
 2001=\u91D1\u5E63\u4E0D\u8DB3\uFF0C\u5FEB\u53BB\u5145\u503C\u54E6
