--- a/pn/mapper/build.gradle
+++ b/pn/mapper/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-  compile project(":$rootName-mybatis")
-  compile project(":$rootName-pn-contract")
+  api project(":$rootName-mybatis")
+  api project(":$rootName-pn-contract")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
