--- a/bridge/qm-server/build.gradle
+++ b/bridge/qm-server/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-  compile project(":$rootName-qm-rest")
-  compile project(":$rootName-qm-spider")
-  compile project(":$rootName-spider-rest")
+  api project(":$rootName-qm-rest")
+  api project(":$rootName-qm-spider")
+  api project(":$rootName-spider-rest")
 }
 
 apply from: project.file("./docker.gradle")
