--- a/mall/core/service/build.gradle
+++ b/mall/core/service/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-  compile project(":$rootName-mybatis")
-  compile project(":$rootName-mall-core-mapper")
+  api project(":$rootName-mybatis")
+  api project(":$rootName-mall-core-mapper")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
