--- a/pn/rest/build.gradle
+++ b/pn/rest/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-  compile project(":$rootName-rest")
-  compile project(":$rootName-pn-service")
+  api project(":$rootName-rest")
+  api project(":$rootName-pn-service")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
