--- a/qm/rest/build.gradle
+++ b/qm/rest/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-  compile project(":$rootName-rest")
-  compile project(":$rootName-qm-service")
+  api project(":$rootName-rest")
+  api project(":$rootName-qm-service")
 
   implementation "com.hankcs:hanlp:$vers.hanlp"
 }
