--- a/qm/scheduler/build.gradle
+++ b/qm/scheduler/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
-  compile project(":$rootName-quartz")
-  compile project(":$rootName-scheduler-mapper")
+  api project(":$rootName-quartz")
+  api project(":$rootName-scheduler-mapper")
   implementation "com.jcraft:jsch:$vers.jsch"
 }
 
