--- a/qm/service/build.gradle
+++ b/qm/service/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-  compile project(":$rootName-mybatis")
-  compile project(":$rootName-qm-mapper")
-  compile project(":$rootName-common-service")
+  api project(":$rootName-mybatis")
+  api project(":$rootName-qm-mapper")
+  api project(":$rootName-common-service")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
