--- a/spider/service/build.gradle
+++ b/spider/service/build.gradle
@@ -1,15 +1,15 @@
 dependencies {
-  compile project(":$rootName-mybatis")
-  compile project(":$rootName-spider-contract")
+  api project(":$rootName-mybatis")
+  api project(":$rootName-spider-contract")
 
-  compile project(":$rootName-test")
-  compile project(":$rootName-quartz")
+  api project(":$rootName-test")
+  api project(":$rootName-quartz")
 
-  compile "org.jsoup:jsoup:$vers.jsoup"
-  compile 'net.sf.saxon:Saxon-HE:9.9.1-4'
-  compile 'org.apache.commons:commons-text:1.7'
-  compile 'com.jayway.jsonpath:json-path:2.4.0'
-  compile "net.sourceforge.htmlcleaner:htmlcleaner:$vers.htmlcleaner"
+  api "org.jsoup:jsoup:$vers.jsoup"
+  api "net.sf.saxon:Saxon-HE:9.9.1-4"
+  api "org.apache.commons:commons-text:1.7"
+  api "com.jayway.jsonpath:json-path:2.4.0"
+  api "net.sourceforge.htmlcleaner:htmlcleaner:$vers.htmlcleaner"
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
