--- a/bridge/qm-server/src/main/resources/application.yml
+++ b/bridge/qm-server/src/main/resources/application.yml
@@ -30,9 +30,9 @@ logging:
   config: classpath:logback-spring.xml
   email:
     host: ${LOGGING_EMAIL_HOST:smtp.qq.com}
-    port: ${LOGGING_EMAIL_PORT:25}
+    port: ${LOGGING_EMAIL_PORT:587}
     username: ${LOGGING_EMAIL_USERNAME:340417867@qq.com}
-    password: ${LOGGING_EMAIL_PASSWORD:gtfzkixrdnybcbbg}
+    password: ${LOGGING_EMAIL_PASSWORD:uspjcloxqxrfbgbd}
     from: ${LOGGING_EMAIL_FROM:尋芳閣错误日志 <340417867@qq.com>}
     to: ${LOGGING_EMAIL_TO:lin3404@126.com}
 
