--- a/bridge/sms-server/build.gradle
+++ b/bridge/sms-server/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
   api project(":$rootName-sms-rest")
+  implementation "javax.mail:mail:1.4.7"
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_docker.gradle")
