--- a/bridge/squirrel-server/src/main/resources/application.yml
+++ b/bridge/squirrel-server/src/main/resources/application.yml
@@ -10,3 +10,13 @@ spring:
 
 admin.username: ${ADMIN_USERNAME:admin}
 admin.password: ${ADMIN_PASSWORD:admin123}
+
+logging:
+  config: classpath:logback-spring.xml
+  email:
+    host: ${LOGGING_EMAIL_HOST:smtp.qq.com}
+    port: ${LOGGING_EMAIL_PORT:587}
+    username: ${LOGGING_EMAIL_USERNAME:340417867@qq.com}
+    password: ${LOGGING_EMAIL_PASSWORD:uspjcloxqxrfbgbd}
+    from: ${LOGGING_EMAIL_FROM:Squirrel <340417867@qq.com>}
+    to: ${LOGGING_EMAIL_TO:lin3404@126.com}
