--- a/card/service/build.gradle
+++ b/card/service/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
   api project(":$rootName-mybatis")
   api project(":$rootName-card-mapper")
+  implementation 'com.github.binarywang:weixin-java-pay:4.6.0'
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
