--- a/bridge/card-server/src/main/resources/application.yml
+++ b/bridge/card-server/src/main/resources/application.yml
@@ -19,5 +19,5 @@ logging:
     port: ${LOGGING_EMAIL_PORT:587}
     username: ${LOGGING_EMAIL_USERNAME:340417867@qq.com}
     password: ${LOGGING_EMAIL_PASSWORD:uspjcloxqxrfbgbd}
-    from: ${LOGGING_EMAIL_FROM:SMS <340417867@qq.com>}
+    from: ${LOGGING_EMAIL_FROM:Card <340417867@qq.com>}
     to: ${LOGGING_EMAIL_TO:lin3404@126.com}
