--- a/bridge/card-server/src/main/resources/bootstrap.yml
+++ b/bridge/card-server/src/main/resources/bootstrap.yml
@@ -1,6 +1,8 @@
 spring:
   cloud:
     nacos:
+      username: nacos
+      password: nacos123
       config:
         server-addr: 127.0.0.1:8848
         prefix: card
