--- a/word/mapper/build.gradle
+++ b/word/mapper/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
   api project(":$rootName-mybatis")
-  api project(":$rootName-squirrel-contract")
+  api project(":$rootName-word-contract")
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
