--- a/word/service/build.gradle
+++ b/word/service/build.gradle
@@ -4,6 +4,7 @@ dependencies {
   api project(":$rootName-word-mapper")
   implementation "com.github.binarywang:weixin-java-pay:4.6.0"
   implementation "org.springframework.cloud:spring-cloud-context:2.1.1.RELEASE"
+  implementation 'org.apache.pdfbox:pdfbox:3.0.2'
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
