--- a/spider/contract/build.gradle
+++ b/spider/contract/build.gradle
@@ -3,8 +3,8 @@ dependencies {
 
     api "org.jsoup:jsoup:$vers.jsoup"
     api "net.sf.saxon:Saxon-HE:9.9.1-4"
-    api "org.apache.commons:commons-text:1.7"
-    api "com.jayway.jsonpath:json-path:2.4.0"
+    api 'org.apache.commons:commons-text:1.10.0'
+    api 'com.jayway.jsonpath:json-path:2.9.0'
     api "net.sourceforge.htmlcleaner:htmlcleaner:$vers.htmlcleaner"
 }
 
