--- a/spider/contract/build.gradle
+++ b/spider/contract/build.gradle
@@ -5,7 +5,7 @@ dependencies {
     api "net.sf.saxon:Saxon-HE:9.9.1-4"
     api 'org.apache.commons:commons-text:1.10.0'
     api 'com.jayway.jsonpath:json-path:2.9.0'
-    api "net.sourceforge.htmlcleaner:htmlcleaner:$vers.htmlcleaner"
+    api 'net.sourceforge.htmlcleaner:htmlcleaner:2.29'
 }
 
 apply from: rootProject.file("buildscript/gradle/sub_maven.gradle")
